# ausweis

./: .gitlab-ci-child.yml  .gitlab-ci.yml  .qmllint.ini  .typos.toml  .yamllint  CMakeLists.txt  CONTRIBUTING.rst  Dockerfile.vnc  LICENSE.txt  README.rst  XIAOMI_NFC_FIX.md  appveyor.yml  ci.cmake
.github/workflows/: CI_build.yml  CI_build_combined.yml  android_build.yml  codeql.yml
ci/: check_formatting.sh  import.py  pipeline.py  playstore.py  sonar-project.properties.in
ci/cmake/: Android.cmake  Bootstrap.cmake  Configuration.cmake  Container.cmake  Docs.cmake  Files.cmake  Libraries.cmake  Linux.cmake  MacOS.cmake  SonarQube.cmake  Win.cmake  iOS.cmake
ci/presets/: iOS.json
cmake/: CompilerFlags.cmake  DVCS.cmake  FindPCSC.cmake  Helper.cmake  Install.cmake  Libraries.cmake  Merge.cmake  Notarization.cmake  Packaging.cmake  Pandoc.cmake  PrepareExecutable.cmake.in  Provider.cmake  SignFiles.cmake.in  SwiftPackage.cmake  Tools.Libraries.cmake  Tools.cmake  Translation.cmake.in  Version.cmake  android.toolchain.cmake  cmd.cmake  iOS.bundles.cmake.in  macOS.pkg.cmake
cmake/pandoc/: convert_tables.lua  custom_filter.lua  preprocess_rst.py  template.tex
docs/: CMakeLists.txt
docs/failurecodes/: failurecodes.rst  metadata.yaml.in  metadata_de.yaml.in
docs/installation_de/: README.de.rst  conf.py.in  index.rst  metadata.yaml.in
docs/installation_en/: README.en.rst  conf.py.in  index.rst  metadata.yaml.in
docs/releasenotes/: 2.4.0.rst  announce.rst  conf.py.in  issues.rst  metadata.yaml.in  support.rst  text.conf.py.in  versions.rst
docs/sdk/: android.rst  changelog.rst  commands.rst  container.rst  desktop.rst  messages.rst  metadata.yaml.in  simulator.rst
libs/: CMakeLists.txt  CMakePresets.json  GovernikusConfig.cmake.in  README.rst  Versions.cmake  patch.cmake  patches.cmake
libs/patches/: openssl-0001-android-shlib_variant.patch  qtbase-0001-Do-not-override-OPENSSL_API_COMPAT.patch  qtbase-0002-Don-t-ignore-offscreen-A11y-elements-for-VoiceOver-o.patch  qtbase-0003-Android-Unify-behavior-of-Accessible.description-wit.patch  qtbase-0004-iOS-Add-dynamic-locking-of-screen-orientation.patch  qtbase-0005-Android-Set-name-matched-class-names-for-Slider-and-.patch  qtbase-0006-a11y-Windows-Implement-UIA_AriaRolePropertyId-for-Ac.patch  qtbase-0007-a11y-iOS-Announce-changes-to-name-description-to-Voi.patch  qtbase-0008-a11y-Android-Announce-changes-to-name-description-to.patch  qtbase-0009-Android-Use-the-TalkBack-focus-signal-to-trigger-foc.patch  qtbase-0010-iOS-Handle-Z-gesture-to-request-closing.patch  qtbase-0011-a11y-Windows-Announce-change-to-Accessible.name-for-.patch  qtbase-0012-Fix-broadcasts-with-dual-stack-IPv6.patch  qtbase-0013-a11y-iOS-Inform-VoiceOver-about-used-language.patch  qtbase-0014-a11y-Android-Inform-TalkBack-about-used-language.patch  qtbase-0015-iOS-Fix-a11y-representation-of-RadioButton-and-Check.patch  qtbase-0016-a11y-Add-Switch-role.patch  qtbase-0017-Add-QAccessibleScrollInterface-to-inform-Android-Tal.patch  qtbase-0018-Introduce-signal-ScrollingPositionChanged-to-signal-.patch  qtbase-0019-a11y-macOS-Implement-accessibilityMinValue-and-acces.patch  qtbase-0020-a11y-Android-Set-a-RangeInfo-by-using-the-ValueInter.patch  qtbase-0021-a11y-Android-Use-correct-event-type-for-value-update.patch  qtbase-0022-a11y-iOS-Do-not-set-UIAccessibilityTraitAdjustable-f.patch  qtbase-0023-Android-Fix-double-emission-of-certain-a11y-events.patch  qtbase-0024-Android-Avoid-announcing-simple-text-as-clickable.patch  qtbase-0025-Revert-Android-Keyboard-Use-new-show-hide-methods-fo.patch  qtbase-0033-Android-a11y-Support-text-selection.patch  (+23 more)
resources/: CMakeLists.txt  ausweisapp.qrc  config.json.in
src/: CMakeLists.txt
test/: CMakeLists.txt
test/tools/: CMakeLists.txt  checkQmlResources.py
test/tools/qmllint/: CMakeLists.txt  ElementPass.cpp  ElementPass.h  Plugin.cpp  Plugin.h  metadata.json
(+562 files in other folders)
